--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,8 @@
            
     <app-ingreso></app-ingreso>
 
-    <app-egreso></app-egreso>
+    <app-egreso
+    [ingresoTotal]="getIngresoTotal()"
+    ></app-egreso>
       
   </div>
