--- a/src/app/cabecero/cabecero.component.html
+++ b/src/app/cabecero/cabecero.component.html
@@ -4,7 +4,7 @@
             Presupuesto Disponible:
         </div>
         
-        <div class="presupuesto_valor">{{presupuestoTotal}}</div>
+        <div class="presupuesto_valor">{{presupuestoTotal | currency:'MNX': '$': '1.2-2'}}</div>
         
         <div class="presupuesto_ingreso limpiarEstilos">
             <div class="presupuesto_ingreso--texto">Ingresos</div>
