--- a/src/app/egreso/egreso.component.html
+++ b/src/app/egreso/egreso.component.html
@@ -8,7 +8,7 @@
                 <div class="elemento_valor">- {{egreso.valor}}</div>
                 <div class="elemento_porcentaje">{{calcularPorcentaje(egreso)}}%</div>
                 <div class="elemento_eliminar">
-                    <button class="elemento_eliminar--btn"><i class="ion-ios-close-outline"></i></button>
+                    <button class="elemento_eliminar--btn"><i class="ion-ios-close-outline"(click)="eliminarEgreso(egreso)"></i></button>
                 </div>
             </div>
         </div>
